# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  exit_functions.c  lets_sort.c  lists.c  main.c  push_swap.c  push_swap.h  sorting.c  stack_ops_double.c  stack_ops_single.c  stacks_operations.c  stacks_print.c
SRCS_BONUS/: checker.c  checker.h  main.c  stack_ops_double.c  stack_ops_single.c  stacks_print.c
SRCS_MAN/: find.c  lets_sort.c  modes.c  push_swap.c  push_swap.h  sorting.c  stack_ops_double.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_only_for_num.c  ft_bzero.c  ft_calloc.c  ft_error.c  ft_find_max.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind_ind_of_max_value.c  ft_lstfind_ind_of_min_value.c  ft_lstfindmax_val.c  ft_lstfindmin_val.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_prompt.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+4 more)
